.vscode/allianceuat_compare/force-app/main/default/objects/b3d__Document_Trace__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>b3d__Contact__r.FirstName + &quot; &quot; + b3d__Contact__r.LastName</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>