.vscode/allianceuat_compare/force-app/main/default/objects/b3d__Document_Trace__c/fields/Contact_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email__c</fullName>
    <formula>b3d__Contact__r.Owner.Email</formula>
    <label>Contact Owner Email</label>
    <type>Text</type>
</CustomField>