.vscode/allianceuat_compare/force-app/main/default/objects/b3d__Document_Trace__c/fields/Contact_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_First_Name__c</fullName>
    <formula>b3d__Contact__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner First Name</label>
    <type>Text</type>
</CustomField>