.vscode/allianceuat_compare/force-app/main/default/objects/b3d__Document_Trace__c/fields/Contact_Owner_Notified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Notified__c</fullName>
    <label>Contact Owner Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>