.vscode/allianceuat_compare/force-app/main/default/objects/b3d__Document_Trace__c/fields/ContactOwner__c.field-meta.xml
<CustomField>
    <fullName>ContactOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Traces</relationshipName>
    <type>Lookup</type>
</CustomField>